# rust_webapp

./: Cargo.toml  cors.html
src/: main.rs
