[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.1", features = ["full"] }
axum = "0.6.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1.37"
tower-http = { version = "0.3.5", features = ["cors"] }